Timepicker list z-index now set via CSS. Fixes #34.

--- a/jquery.timepicker.css
+++ b/jquery.timepicker.css
@@ -11,6 +11,7 @@
 	-moz-box-shadow:0 5px 10px rgba(0,0,0,0.2);
 	box-shadow:0 5px 10px rgba(0,0,0,0.2);
 	outline: none;
+	z-index: 10001;
 }
 
 .ui-timepicker-list.ui-timepicker-with-duration {
